[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
add-one = { path = "../add-one" }
add-two = { path = "../add-two" }
smart-pointer = { path = "../smart-pointer" }
fearless-concurrency = { path = "../fearless-concurrency" }
oop-in-rust = { path = "../oop-in-rust" }
blog = { path = "../blog" }
pattern-matching = { path = "../pattern-matching" }
advanced-features = { path = "../advanced-features" }